--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is an empirical results on SegFuzz Bench (https://github.com/casys-kaist/segfuzz/tree/release/gotools/src/github.com/google/segfuzz/sys/linux/test/cve) for Snowboard.
+This is an empirical result on SegFuzz Bench (https://github.com/casys-kaist/segfuzz/tree/release/gotools/src/github.com/google/segfuzz/sys/linux/test/cve) for Snowboard.
